# ZentifyCleaner

./: Cargo.toml  README.md  README_de.md  build.rs
scripts/: install.cmd  install.ps1  release.py  uninstall.cmd  uninstall.ps1
src/: lib.rs  main.rs
target_build_20250913_005557/: .rustc_info.json
target_build_20250913_005557/release/: libzentify_cleaner.d  zentify-cleaner.d  zentify-web.d
target_build_20250913_005557/release/.fingerprint/aho-corasick-80cdbfc0431745d2/: lib-aho_corasick  lib-aho_corasick.json
target_build_20250913_005557/release/.fingerprint/anstream-85a14e4ee298c902/: lib-anstream  lib-anstream.json
target_build_20250913_005557/release/.fingerprint/anstyle-15b802b4770e0989/: lib-anstyle  lib-anstyle.json
target_build_20250913_005557/release/.fingerprint/anstyle-parse-ef546758adc0c49e/: lib-anstyle_parse  lib-anstyle_parse.json
target_build_20250913_005557/release/.fingerprint/anstyle-query-3997899338c991bd/: lib-anstyle_query  lib-anstyle_query.json
target_build_20250913_005557/release/.fingerprint/anstyle-wincon-2f49696e85609088/: lib-anstyle_wincon  lib-anstyle_wincon.json
target_build_20250913_005557/release/.fingerprint/async-trait-092df2674d45c1fd/: lib-async_trait  lib-async_trait.json
target_build_20250913_005557/release/.fingerprint/atomic-waker-429c71d519a3dda8/: lib-atomic_waker  lib-atomic_waker.json
target_build_20250913_005557/release/.fingerprint/axum-5dbcd7cd6423a40b/: lib-axum  lib-axum.json
target_build_20250913_005557/release/.fingerprint/axum-core-61d4808eca23c47e/: lib-axum_core  lib-axum_core.json
target_build_20250913_164123/: .rustc_info.json
target_build_20250913_164123/release/: libzentify_cleaner.d  zentify-cleaner.d  zentify-web.d
(+294 files in other folders)
